# nrf-embassy-test1

./: Cargo.toml  README.md  build  build.rs  memory-nrf52840-s140.x
src/: main.rs
